fix(docs-api): tables overflow screen width on mobile
- fix docs-api layouts to work down to 360px width
  - fixes Observers, Accessibility, Drag and Drop, Platform, and Overlay layouts
- fix DeprecatedconnectedTo to Deprecated connectedTo display issue
- update footer copyright
- fix exception trying to unsubscribe to undefined routeParamSubscription
- change how sidenav is closed on mobile after selecting a nav item

Fixes #550

--- a/src/app/pages/component-sidenav/_component-sidenav-theme.scss
+++ b/src/app/pages/component-sidenav/_component-sidenav-theme.scss
@@ -31,7 +31,7 @@
       border-top: solid 1px rgba(mat-color($foreground, secondary-text), .1)
     }
 
-    button {
+    a {
       color: mat-color($foreground, secondary-text);
 
       &.docs-component-viewer-sidenav-item-selected,
